# galaga

./: Cargo.toml  README.md  pattern.txt
src/: cli.rs  fs.rs  git.rs  main.rs  pattern.rs
